versioned_docs/version-2.11.0/tokens/storage/index.md
---
description: "Storage and display options for Zaparoo NFC card collections: binders, cassette cases, Nintendo Switch cases, card boxes, and 3D printed holders."
keywords: [zaparoo card storage, nfc card collection, zaparoo binder, game card storage]
---

# Storage

As your collection grows, you'll want a way to organize and display your [NFC cards](../nfc/index.md). These are a few options Zaparoo users have shared or adapted from trading card and retro gaming collections.

## Binders

Binders work well when you want to browse cards in pages. The pocket size depends on the cards you're using:

**Standard NFC cards** (credit card size, 85.6 x 54mm) fit in K-pop photo card binders. Search for `K-pop card binder` or `photocard binder`.

**Trading card size** NFC cards, including cards from the <ProductLink href="https://shop.zaparoo.com/" store="shop">Zaparoo Shop</ProductLink>, fit in standard trading card binders with 9-pocket pages, the same kind used for Pokemon, Magic: The Gathering, and other TCGs.

Top-loading pockets are usually better than side-loading pockets because cards are less likely to slip out as you turn pages. If you use double-sided pages, pulling cards from the back side can be awkward once the binder is full.

## Cassette cases

[Cassette cases](./cassette-cases.md) fit well with retro gaming setups. You can create custom cassette wrap covers with [Zaparoo Designer](../../designer/index.md) or the [NFC Cassette Cover Generator](https://github.com/Anime0t4ku/NFC-Cassette-Cover-Generator), and 3D printed inserts are available for holding credit card size NFC cards inside the cases.

## Nintendo Switch cases

Empty retail-style Nintendo Switch replacement cases are another shelf-friendly option for credit card size NFC cards. They are widely sold through marketplace sellers, including AliExpress, and leave enough room inside for a card and printed cover art.

Search for `empty Nintendo Switch game case` or `Nintendo Switch replacement case`. Avoid compact Switch cartridge wallets or game card holders; those slots are made for small Switch game cards, not full-size NFC cards.

## Card boxes

Long card boxes, the kind used for bulk Magic: The Gathering or sports card storage, work well for larger collections where you want to flip through cards quickly instead of displaying them in pages.

## Cases and holders

The community has designed a range of 3D printed cases and card holders. See the [community projects](../../community-projects/) page for a full list of cases, card trays, and reader enclosures.
